fix: add z-index for Header

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,6 +3,7 @@
 
   position: absolute;
   width: 100%;
+  z-index: 1;
 
   display: flex;
   justify-content: space-between;
